// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders an input with size large and disabled false 1`] = `
.emotion-0 {
  font-size: 20px;
  height: 64px;
  padding: 0 24;
  background: white;
  border: 0;
  border-radius: 4px;
  box-shadow: inset 0 0 0 1px rgb(209,211,216);
  box-sizing: border-box;
  color: rgb(77,83,86);
  display: inline-block;
  font-family: sans-serif;
  font-family: Lato;
  margin: 0;
  padding: 8px 16px;
  vertical-align: baseline;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::-moz-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:disabled,
.emotion-0:active:disabled,
.emotion-0:focus:disabled {
  cursor: not-allowed;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::-moz-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::placeholder {
  color: #D1D3D8;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 1px rgb(51,170,204);
  outline: none;
}

<input
  class="emotion-0"
  id="input text"
  name="input text"
  placeholder="input text"
  value=""
/>
`;

exports[`snapshots renders an input with size large and disabled true 1`] = `
.emotion-0 {
  font-size: 20px;
  height: 64px;
  padding: 0 24;
  background: white;
  border: 0;
  border-radius: 4px;
  box-shadow: inset 0 0 0 1px rgb(209,211,216);
  box-sizing: border-box;
  color: rgb(77,83,86);
  display: inline-block;
  font-family: sans-serif;
  font-family: Lato;
  margin: 0;
  padding: 8px 16px;
  vertical-align: baseline;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::-moz-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:disabled,
.emotion-0:active:disabled,
.emotion-0:focus:disabled {
  cursor: not-allowed;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::-moz-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::placeholder {
  color: #D1D3D8;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 1px rgb(51,170,204);
  outline: none;
}

<input
  class="emotion-0"
  disabled=""
  id="input text"
  name="input text"
  placeholder="input text"
  value=""
/>
`;

exports[`snapshots renders an input with size medium and disabled false 1`] = `
.emotion-0 {
  font-size: 16px;
  height: 48px;
  padding: 0 16;
  background: white;
  border: 0;
  border-radius: 4px;
  box-shadow: inset 0 0 0 1px rgb(209,211,216);
  box-sizing: border-box;
  color: rgb(77,83,86);
  display: inline-block;
  font-family: sans-serif;
  font-family: Lato;
  margin: 0;
  padding: 8px 16px;
  vertical-align: baseline;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::-moz-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:disabled,
.emotion-0:active:disabled,
.emotion-0:focus:disabled {
  cursor: not-allowed;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::-moz-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::placeholder {
  color: #D1D3D8;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 1px rgb(51,170,204);
  outline: none;
}

<input
  class="emotion-0"
  id="input text"
  name="input text"
  placeholder="input text"
  value=""
/>
`;

exports[`snapshots renders an input with size medium and disabled true 1`] = `
.emotion-0 {
  font-size: 16px;
  height: 48px;
  padding: 0 16;
  background: white;
  border: 0;
  border-radius: 4px;
  box-shadow: inset 0 0 0 1px rgb(209,211,216);
  box-sizing: border-box;
  color: rgb(77,83,86);
  display: inline-block;
  font-family: sans-serif;
  font-family: Lato;
  margin: 0;
  padding: 8px 16px;
  vertical-align: baseline;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::-moz-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:disabled,
.emotion-0:active:disabled,
.emotion-0:focus:disabled {
  cursor: not-allowed;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::-moz-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::placeholder {
  color: #D1D3D8;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 1px rgb(51,170,204);
  outline: none;
}

<input
  class="emotion-0"
  disabled=""
  id="input text"
  name="input text"
  placeholder="input text"
  value=""
/>
`;

exports[`snapshots renders an input with size small and disabled false 1`] = `
.emotion-0 {
  font-size: 16px;
  height: 36px;
  padding: 0 12;
  background: white;
  border: 0;
  border-radius: 4px;
  box-shadow: inset 0 0 0 1px rgb(209,211,216);
  box-sizing: border-box;
  color: rgb(77,83,86);
  display: inline-block;
  font-family: sans-serif;
  font-family: Lato;
  margin: 0;
  padding: 8px 16px;
  vertical-align: baseline;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::-moz-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:disabled,
.emotion-0:active:disabled,
.emotion-0:focus:disabled {
  cursor: not-allowed;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::-moz-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::placeholder {
  color: #D1D3D8;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 1px rgb(51,170,204);
  outline: none;
}

<input
  class="emotion-0"
  id="input text"
  name="input text"
  placeholder="input text"
  value=""
/>
`;

exports[`snapshots renders an input with size small and disabled true 1`] = `
.emotion-0 {
  font-size: 16px;
  height: 36px;
  padding: 0 12;
  background: white;
  border: 0;
  border-radius: 4px;
  box-shadow: inset 0 0 0 1px rgb(209,211,216);
  box-sizing: border-box;
  color: rgb(77,83,86);
  display: inline-block;
  font-family: sans-serif;
  font-family: Lato;
  margin: 0;
  padding: 8px 16px;
  vertical-align: baseline;
}

.emotion-0::-webkit-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::-moz-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:-ms-input-placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0::placeholder {
  color: rgb(133,144,148);
  font-family: inherit;
}

.emotion-0:disabled,
.emotion-0:active:disabled,
.emotion-0:focus:disabled {
  cursor: not-allowed;
}

.emotion-0:disabled::-webkit-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::-moz-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled:-ms-input-placeholder {
  color: #D1D3D8;
}

.emotion-0:disabled::placeholder {
  color: #D1D3D8;
}

.emotion-0:focus {
  box-shadow: inset 0 0 0 1px rgb(51,170,204);
  outline: none;
}

<input
  class="emotion-0"
  disabled=""
  id="input text"
  name="input text"
  placeholder="input text"
  value=""
/>
`;
